force-app/main/default/objects/SystemIds__c/SystemIds__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System IDs</label>
</CustomObject>