force-app/main/default/objects/SystemIds__c/fields/BusinessHoursId_24Hours__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId_24Hours__c</fullName>
    <label>BusinessHoursId_24Hours</label>
    <length>18</length>
    <type>Text</type>
</CustomField>