force-app/main/default/objects/SystemIds__c/fields/BusinessHoursId_Roadnet__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId_Roadnet__c</fullName>
    <label>BusinessHoursId_Roadnet</label>
    <length>18</length>
    <type>Text</type>
</CustomField>