force-app/main/default/objects/SystemIds__c/fields/FieldId_Case_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FieldId_Case_BusinessUnit__c</fullName>
    <label>FieldId_Case_BusinessUnit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>