force-app/main/default/objects/SystemIds__c/fields/FieldId_CaseEvent_Case__c.field-meta.xml
<CustomField>
    <fullName>FieldId_CaseEvent_Case__c</fullName>
    <label>FieldId_CaseEvent_Case</label>
    <length>18</length>
    <type>Text</type>
</CustomField>