force-app/main/default/objects/SystemIds__c/fields/FieldId_Opportunity_Comp1__c.field-meta.xml
<CustomField>
    <fullName>FieldId_Opportunity_Comp1__c</fullName>
    <label>FieldId_Opportunity_Comp1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>