force-app/main/default/objects/SystemIds__c/fields/FieldId_Opportunity_Oppt_Loc__c.field-meta.xml
<CustomField>
    <fullName>FieldId_Opportunity_Oppt_Loc__c</fullName>
    <label>FieldId_Opportunity_Oppt_Loc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>