force-app/main/default/objects/SystemIds__c/fields/FieldId_Opportunity_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>FieldId_Opportunity_Order_Type__c</fullName>
    <label>FieldId_Opportunity_Order_Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>