force-app/main/default/objects/SystemIds__c/fields/FieldId_Opportunity_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>FieldId_Opportunity_Primary_Contact__c</fullName>
    <label>FieldId_Opportunity_Primary_Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>