force-app/main/default/objects/SystemIds__c/fields/FieldId_StreetArea_Map_Set__c.field-meta.xml
<CustomField>
    <fullName>FieldId_StreetArea_Map_Set__c</fullName>
    <label>FieldId_StreetArea_Map_Set</label>
    <length>18</length>
    <type>Text</type>
</CustomField>