force-app/main/default/objects/SystemIds__c/fields/RecordId_pse_defaultGroup__c.field-meta.xml
<CustomField>
    <fullName>RecordId_pse_defaultGroup__c</fullName>
    <label>RecordId_pse_defaultGroup</label>
    <length>18</length>
    <type>Text</type>
</CustomField>