force-app/main/default/objects/SystemIds__c/fields/RecordTypeId_Account_TLSales__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Account_TLSales__c</fullName>
    <label>RecordTypeId_Account_TLSales</label>
    <length>18</length>
    <type>Text</type>
</CustomField>