force-app/main/default/objects/SystemIds__c/fields/RecordTypeId_Case_CallCenter__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Case_CallCenter__c</fullName>
    <label>RecordTypeId_Case_CallCenter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>