force-app/main/default/objects/SystemIds__c/fields/RecordTypeId_Case_CustomerCommunity__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Case_CustomerCommunity__c</fullName>
    <label>RecordTypeId_Case_CustomerCommunity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>