force-app/main/default/objects/SystemIds__c/fields/RecordTypeId_Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Opportunity_Partner__c</fullName>
    <label>RecordTypeId_Opportunity_Partner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>