force-app/main/default/objects/SystemIds__c/fields/RecordTypeId_Opportunity_RenewalOnly__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Opportunity_RenewalOnly__c</fullName>
    <label>RecordTypeId_Opportunity_RenewalOnly</label>
    <length>18</length>
    <type>Text</type>
</CustomField>