force-app/main/default/objects/SystemIds__c/fields/UserId_Opportunity_Grove_Task_Creation__c.field-meta.xml
<CustomField>
    <fullName>UserId_Opportunity_Grove_Task_Creation__c</fullName>
    <description>UserId to whom Grove Tasks will be assigned When Omnitracs Canada Opportunities are Closed Won for certain products</description>
    <label>UserId Opportunity Grove Task Creation</label>
    <length>18</length>
    <type>Text</type>
</CustomField>